--- a/index.html
+++ b/index.html
@@ -12,9 +12,43 @@
     <script src="https://kit.fontawesome.com/c353010116.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap"
+    rel="stylesheet">
+
+    <script src="main.js" defer></script>
 </head>
 <body>
-    
+    <!-- Navbar -->
+    <nav id="navbar">
+        <div class="navbar__logo">
+            <i class="fab fa-diaspora"></i>
+            <a href="#">GYUJEONG</a>
+        </div>
+        <div class="navbar__menu">
+            <ul class="navbar__menu">
+                <li class="navbar__menu__item">Home</li>
+                <li class="navbar__menu__item">About</li>
+                <li class="navbar__menu__item">Skills</li>
+                <li class="navbar__menu__item">My work</li>
+                <li class="navbar__menu__item">Testimonial</li>
+                <li class="navbar__menu__item">Contact</li>
+            </ul>
+        </div>
+    </nav>
+
+    <!-- About -->
+    <section id="about"></section>
+
+    <!-- Skills -->
+    <section id="skills"></section>
+
+    <!-- Work -->
+    <section id="work"></section>
+
+    <!-- Testimonial -->
+    <section id="testimonial"></section>
+
+    <!-- Contact -->
+    <section id="contact"></section>
 </body>
 </html>
