--- a/index.html
+++ b/index.html
@@ -35,6 +35,20 @@
         
     </nav>
 
+    <!-- Home -->
+    <img id="home">
+        <img
+            src="imgs/home-profile.jpg"
+            alt="GYUJEONG's profile photo"
+            class="home_avatar"
+            width="300px"
+            height=auto
+        />
+        <h1 class="home__title">Hello,<br />I'm GYUJEONG HAN</h1>
+        <h2 class="home__disciption">Software Engineer</h2>
+        <button class="home__contact">Contact Me</button>
+    </section>
+
     <!-- About -->
     <section id="about"></section>
 
