--- a/index.html
+++ b/index.html
@@ -45,12 +45,46 @@
             height=auto
         />
         <h1 class="home__title">Hello,<br />I'm GYUJEONG HAN</h1>
-        <h2 class="home__disciption">Software Engineer</h2>
+        <h2 class="home__desciption">Software Engineer</h2>
         <button class="home__contact">Contact Me</button>
     </section>
 
     <!-- About -->
-    <section id="about"></section>
+    <section id="about">
+        <h1>About me</h1>
+        <p>아주대학교에서 디지털미디어와 소프트웨어를 전공하고 있습니다.</p>
+        <div class="about__majors">
+            <div class="major">
+                <div class="major__icon">
+                    <i class="fab fa-html5"></i>
+                </div>
+                <div class="major__title">Front-end</div>
+                <div class="major__description">HTML, CSS, JavaScript</div>
+            </div>
+            <div class="major">
+                <div class="major__icon">
+                    <i class="fab fa-html5"></i>
+                </div>
+                <div class="major__title">Moblie</div>
+                <div class="major__description">Flutter</div>
+            </div>
+
+            <div class="about__jobs">
+                <div class="job1">
+                    <img src="imgs/jobs/ajou.png" alt="school logo" class="job_logo" width="100">
+                    <p class="job__name">아주대학교 / major : 디지털미디어학과 / plural major : 소프트웨어학과</p>
+                    <p class="job__period">2018.3 ~ 2024.8</p>
+                </div>
+                <div class="job2">
+                    <img src="imgs/jobs/pixelro.png" alt="job logo" class="job_logo2" width="100">
+                    <p class="job__name">픽셀로 / 개발부 인턴</p>
+                    <p class="job__period">2023.1 ~ 2023.2</p>
+                </div>
+            </div>
+            
+            
+        </div>
+    </section>
 
     <!-- Skills -->
     <section id="skills"></section>
