--- a/index.html
+++ b/index.html
@@ -68,7 +68,6 @@
                 <div class="major__title">Moblie</div>
                 <div class="major__description">Flutter</div>
             </div>
-
             <div class="about__jobs">
                 <div class="job1">
                     <img src="imgs/jobs/ajou.png" alt="school logo" class="job_logo" width="100">
@@ -81,13 +80,67 @@
                     <p class="job__period">2023.1 ~ 2023.2</p>
                 </div>
             </div>
-            
-            
         </div>
     </section>
 
     <!-- Skills -->
-    <section id="skills"></section>
+    <section id="skills">
+        <h1>Skills</h1>
+        <h2>Skills & Attritubes</h2>
+        <p></p>
+        <div class="skillset">
+            <div class="skillset_left">
+                <h3 class="skilleset_title">Skills</h3>
+                <div class="skill">
+                    <div class="skill_description">
+                        <span>HTML</span>
+                        <span>90%</span>
+                    </div>
+                    <div class="skill_bar">
+                        <div class="skill_value"></div>
+                    </div>
+                </div>
+                <div class="skill">
+                    <div class="skill_description">
+                        <span>CSS</span>
+                        <span>80%</span>
+                    </div>
+                    <div class="skill_bar">
+                        <div class="skill_value"></div>
+                    </div>
+                </div>
+                <div class="skill">
+                    <div class="skill_description">
+                        <span>JavaScript</span>
+                        <span>60%</span>
+                    </div>
+                    <div class="skill_bar">
+                        <div class="skill_value"></div>
+                    </div>
+                </div>
+            </div>
+            <div class="skillset_right">
+                <div class="tools">
+                    <h3 class="tools__title">Tools</h3>
+                    <ul class="tools_list">
+                        <li><span>Visual Studio Code</span></li>
+                        <li><span>InteliJ</span></li>
+                        <li><span>Android Studio</span></li>
+                        <li><span>Xcode</span></li>
+                        <li><span>Pycharm</span></li>
+                    </ul>
+                </div>
+                <div class="etc">
+                    <h3 class="etc__title">Etc</h3>
+                    <ul class="etc__list">
+                        <li><span>Git</span></li>
+                        <li><span>Figma</span></li>
+                        <li><span>Interactive Design</span></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <!-- Work -->
     <section id="work"></section>
