--- a/index.html
+++ b/index.html
@@ -143,7 +143,31 @@
     </section>
 
     <!-- Work -->
-    <section id="work"></section>
+    <section id="work">
+        <h1>My work</h1>
+        <h3>Projects</h3>
+        <div class="work__categories">
+            <button class="category__btn">All<span class="category__count">8</span></button>
+            <button class="category__btn">Front-end : Web Basic<span class="category__count">3</span></button>
+            <button class="category__btn">Front-end : React<span class="category__count">3</span></button>
+            <button class="category__btn">Front-end : Interactive<span class="category__count">2</span></button>
+        </div>
+
+        <!-- 사진에 마우스 대면 프로젝트 이름이, 클릭하면 Github 링크로 이동 -->
+        <div class="work_projects">
+            <a
+                href=""
+                class="project"
+                target="_blank"
+            >
+            <img src="imgs/projects/nav.png" alt="pr_img">
+            <div class="project_description">
+                <h3>Example</h3>
+                <span>example</span>
+            </div>
+            </a>
+        </div>
+    </section>
 
     <!-- Testimonial -->
     <section id="testimonial"></section>
