--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                 class="project"
                 target="_blank"
             >
-            <img src="imgs/projects/nav.png" alt="pr_img">
+            <img class="project_img" src="imgs/projects/nav.png" alt="pr_img">
             <div class="project_description">
                 <h3>Example</h3>
                 <span>example</span>
@@ -170,7 +170,30 @@
     </section>
 
     <!-- Testimonial -->
-    <section id="testimonial"></section>
+    <section id="testimonial">
+        <h1>Testimonials</h1>
+        <h3>See what they say about me</h3>
+        <div class="testimonials">
+            <div class="testimonial">
+                <img src="imgs/people1.jpg" alt="people1" class="testimonial__avatar">
+                <div class="testimonal__speech-bubble">
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nemo veritatis ipsam, aliquam delectus quae fuga voluptates ullam soluta quia reiciendis aliquid, sit consectetur maiores laboriosam molestiae ab inventore illum! Earum.</p>
+                    <p class="name">
+                        <a href="">Mintae Kim</a> / Ajou University
+                    </p>
+                </div>
+            </div>
+            <div class="testimonial">
+                <img src="imgs/people1.jpg" alt="people1" class="testimonial__avatar">
+                <div class="testimonal__speech-bubble">
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nemo veritatis ipsam, aliquam delectus quae fuga voluptates ullam soluta quia reiciendis aliquid, sit consectetur maiores laboriosam molestiae ab inventore illum! Earum.</p>
+                    <p class="name">
+                        <a href="">Mintae Kim</a> / Ajou University
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <!-- Contact -->
     <section id="contact"></section>
