--- a/index.html
+++ b/index.html
@@ -196,6 +196,14 @@
     </section>
 
     <!-- Contact -->
-    <section id="contact"></section>
+    <section id="contact">
+        <h1 class="contact__title">Let's talk</h1>
+        <h2 class="contact__email">rbwjrbxo@ajou.ac.kr</h2>
+        <div class="contact_links">
+            <a href="https://github.com/GYUJEONGHAN" target="_blank"><i class="fa-brands fa-github"></i></a>
+            <a href="https://gyujh.tistory.com/" target="_blank"><img src="imgs/Tistory.png" width="30"></a>
+        </div>
+        <p class="contact__rights">2023 GYUJEONG HAN - All rights reserved</p>
+    </section>
 </body>
 </html>
