--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <nav id="navbar">
         <div class="navbar__logo">
             <i class="fab fa-diaspora"></i>
-            <a href="#">GYUJEONG</a>
+            <a href="#">gyujh</a>
         </div>
         <ul class="navbar__menu">
             <li class="navbar__menu__item active">Home</li>
@@ -36,15 +36,15 @@
     </nav>
 
     <!-- Home -->
-    <img id="home">
+    <section id="home">
         <img
             src="imgs/home-profile.jpg"
             alt="GYUJEONG's profile photo"
             class="home_avatar"
-            width="300px"
+
             height=auto
         />
-        <h1 class="home__title">Hello,<br />I'm GYUJEONG HAN</h1>
+        <h1 class="home__title">Hello,<br />I'm GYUJEONG HAN.</h1>
         <h2 class="home__desciption">Software Engineer</h2>
         <button class="home__contact">Contact Me</button>
     </section>
