--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>GYUJEONG's Portfolio</title>
     <meta name="description" content="Portfolio for software engineer">
     <meta name="author" content="GYUJEONG HAN">
-    <link rel="icon" type="image/png" href="imgs/favicon.png">
+    <link rel="icon" type="image/png" href="imgs/motoicon.png">
 
     <script src="https://kit.fontawesome.com/c353010116.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -22,8 +22,7 @@
     <!-- Navbar -->
     <nav id="navbar">
         <div class="navbar__logo">
-            <i class="fab fa-diaspora"></i>
-            <a href="#">gyujh</a>
+            <a href=""><img src="imgs/motoicon.png" alt="" width="120px"></a>
         </div>
         <ul class="navbar__menu">
             <li class="navbar__menu__item active">Home</li>
