--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GYUJEONG's Portfolio</title>
+    <title>GYUJEONG</title>
     <meta name="description" content="Portfolio for software engineer">
     <meta name="author" content="GYUJEONG HAN">
     <link rel="icon" type="image/png" href="imgs/motoicon.png">
@@ -28,7 +28,7 @@
             <li class="navbar__menu__item active">Home</li>
             <li class="navbar__menu__item">About</li>
             <li class="navbar__menu__item">Skills</li>
-            <li class="navbar__menu__item">My work</li>
+            <li class="navbar__menu__item">My Work</li>
             <li class="navbar__menu__item">Testimonial</li>
             <li class="navbar__menu__item">Contact</li>
         </ul>
@@ -44,7 +44,7 @@
     </section>
 
     <!-- About -->
-    <section id="about" class="section">
+    <section id="about" class="section section__container">
         <h1>About me</h1>
         <p>I'm majoring in Digital-Media and Software at Ajou University.</p>
         <div class="about__majors">
@@ -83,58 +83,81 @@
 
     <!-- Skills -->
     <section id="skills" class="section">
-        <h1>Skills</h1>
-        <h2>Skills & Attritubes</h2>
-        <p></p>
-        <div class="skillset">
-            <div class="skillset_left">
-                <h3 class="skilleset_title">Skills</h3>
-                <div class="skill">
-                    <div class="skill_description">
-                        <span>HTML</span>
-                        <span>90%</span>
+        <div class="section__container">
+            <h1>Skills</h1>
+            <h2>Skills & Attritubes</h2>
+            <p></p>
+            <div class="skillset">
+                <div class="skillset_left">
+                    <h3 class="skillset__title">Skills</h3>
+                    <div class="skill">
+                        <div class="skill_description">
+                            <span>HTML</span>
+                            <span>90%</span>
+                        </div>
+                        <div class="skill_bar">
+                            <div class="skill_value" style="width:
+                            90%"></div>
+                        </div>
                     </div>
-                    <div class="skill_bar">
-                        <div class="skill_value"></div>
+                    <div class="skill">
+                        <div class="skill_description">
+                            <span>CSS</span>
+                            <span>90%</span>
+                        </div>
+                        <div class="skill_bar">
+                            <div class="skill_value" style="width:
+                            90%"></div>
+                        </div>
+                    </div>
+                    <div class="skill">
+                        <div class="skill_description">
+                            <span>JavaScript</span>
+                            <span>60%</span>
+                        </div>
+                        <div class="skill_bar">
+                            <div class="skill_value" style="width:
+                            60%"></div>
+                        </div>
+                    </div>
+                    <div class="skill">
+                        <div class="skill_description">
+                            <span>C/C++</span>
+                            <span>80%</span>
+                        </div>
+                        <div class="skill_bar">
+                            <div class="skill_value" style="width:
+                            80%"></div>
+                        </div>
+                    </div>
+                    <div class="skill">
+                        <div class="skill_description">
+                            <span>Python</span>
+                            <span>90%</span>
+                        </div>
+                        <div class="skill_bar">
+                            <div class="skill_value" style="width:
+                            90%"></div>
+                        </div>
                     </div>
                 </div>
-                <div class="skill">
-                    <div class="skill_description">
-                        <span>CSS</span>
-                        <span>80%</span>
+                <div class="skillset_right">
+                    <div class="tools">
+                        <h3 class="skillset__title">Tools</h3>
+                        <ul class="tools_list">
+                            <li><span>Visual Studio Code</span></li>
+                            <li><span>InteliJ</span></li>
+                            <li><span>Xcode</span></li>
+                            <li><span>Pycharm</span></li>
+                            <li><span>Android Studio</span></li>
+                        </ul>
                     </div>
-                    <div class="skill_bar">
-                        <div class="skill_value"></div>
+                    <div class="etc">
+                        <h3 class="skillset__title">Etc</h3>
+                        <ul class="etc__list">
+                            <li><span>Git</span></li>
+                        </ul>
                     </div>
-                </div>
-                <div class="skill">
-                    <div class="skill_description">
-                        <span>JavaScript</span>
-                        <span>60%</span>
-                    </div>
-                    <div class="skill_bar">
-                        <div class="skill_value"></div>
-                    </div>
-                </div>
-            </div>
-            <div class="skillset_right">
-                <div class="tools">
-                    <h3 class="tools__title">Tools</h3>
-                    <ul class="tools_list">
-                        <li><span>Visual Studio Code</span></li>
-                        <li><span>InteliJ</span></li>
-                        <li><span>Android Studio</span></li>
-                        <li><span>Xcode</span></li>
-                        <li><span>Pycharm</span></li>
-                    </ul>
-                </div>
-                <div class="etc">
-                    <h3 class="etc__title">Etc</h3>
-                    <ul class="etc__list">
-                        <li><span>Git</span></li>
-                        <li><span>Figma</span></li>
-                        <li><span>Interactive Design</span></li>
-                    </ul>
                 </div>
             </div>
         </div>
