--- a/index.html
+++ b/index.html
@@ -165,13 +165,13 @@
 
     <!-- Work -->
     <section id="work" class="section">
-        <h1>My work</h1>
-        <h3>Projects</h3>
+        <h1>My Work</h1>
+        <h3></h3>
         <div class="work__categories">
             <button class="category__btn">All<span class="category__count">8</span></button>
             <button class="category__btn">Front-end : Web Basic<span class="category__count">3</span></button>
             <button class="category__btn">Front-end : React<span class="category__count">3</span></button>
-            <button class="category__btn">Front-end : Interactive<span class="category__count">2</span></button>
+            <button class="category__btn">Front-end : example<span class="category__count">2</span></button>
         </div>
 
         <!-- 사진에 마우스 대면 프로젝트 이름이, 클릭하면 Github 링크로 이동 -->
@@ -180,6 +180,47 @@
                 <img class="project_img" src="imgs/projects/nav.png" alt="pr_img">
                 <div class="project_description">
                     <h3>Example</h3>
+                    <div class="project_line"></div>
+                    <span>example</span>
+                </div>
+            </a>
+            <a href="" class="project" target="_blank">
+                <img class="project_img" src="imgs/projects/nav.png" alt="pr_img">
+                <div class="project_description">
+                    <h3>Example</h3>
+                    <div class="project_line"></div>
+                    <span>example</span>
+                </div>
+            </a>
+            <a href="" class="project" target="_blank">
+                <img class="project_img" src="imgs/projects/nav.png" alt="pr_img">
+                <div class="project_description">
+                    <h3>Example</h3>
+                    <div class="project_line"></div>
+                    <span>example</span>
+                </div>
+            </a>
+            <a href="" class="project" target="_blank">
+                <img class="project_img" src="imgs/projects/nav.png" alt="pr_img">
+                <div class="project_description">
+                    <h3>Example</h3>
+                    <div class="project_line"></div>
+                    <span>example</span>
+                </div>
+            </a>
+            <a href="" class="project" target="_blank">
+                <img class="project_img" src="imgs/projects/nav.png" alt="pr_img">
+                <div class="project_description">
+                    <h3>Example</h3>
+                    <div class="project_line"></div>
+                    <span>example</span>
+                </div>
+            </a>
+            <a href="" class="project" target="_blank">
+                <img class="project_img" src="imgs/projects/nav.png" alt="pr_img">
+                <div class="project_description">
+                    <h3>Example</h3>
+                    <div class="project_line"></div>
                     <span>example</span>
                 </div>
             </a>
