--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
 
     <!-- Testimonial -->
     <section id="testimonial" class="section">
-        <h1>Testimonials</h1>
+        <h1>Testimonial</h1>
         <div class="testimonials">
             <div class="testimonial">
                 <img src="imgs/people1.jpg" alt="people1" class="testimonial__avatar">
@@ -259,10 +259,10 @@
     <!-- Contact -->
     <section id="contact" class="section">
         <h1 class="contact__title">Let's talk</h1>
-        <h2 class="contact__email">rbwjrbxo@ajou.ac.kr</h2>
         <div class="contact_links">
-            <a href="https://github.com/GYUJEONGHAN" target="_blank"><i class="fa-brands fa-github"></i></a>
-            <a href="https://gyujh.tistory.com/" target="_blank"><img src="imgs/Tistory.png" width="30"></a>
+            <a href="mailto:rbwjrbxo@ajou.ac.kr" target="_blank"><i class="fa-sharp fa-solid fa-envelope"></i></a>
+            <a href="https://github.com/GYUJEONGHAN" target="_blank"><i class="fa-brands fa-github" width = "50px"></i></a>
+            <a href="https://gyujh.tistory.com/" target="_blank"><img src="imgs/Tistory.png"></a>
         </div>
         <p class="contact__rights">2023 GYUJEONG HAN - All rights reserved</p>
     </section>
