--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
             <li class="navbar__menu__item">Contact</li>
         </ul>
 
+        <!-- Toggle Button -->
+        <button class="navbar__toggle-btn">
+            <i class="fa-solid fa-bars"></i>
+        </button>
     </nav>
 
     <!-- Home -->
@@ -46,13 +50,13 @@
     <!-- About -->
     <section id="about" class="section section__container">
         <h1>About me</h1>
-        <p>I'm majoring in Digital-Media and Software at Ajou University.</p>
+        <p class = "about_hi">I'm majoring in Digital-Media and Software at Ajou University.</p>
         <div class="about__majors">
             <div class="major">
                 <div class="major__icon">
                     <i class="fab fa-html5"></i>
                 </div>
-                <h2 class="major__title">Front-end</h2>
+                <h2 class="major__title"> Web Front-end</h2>
                 <div class="major__description">HTML<br> CSS<br>JavaScript</div>
             </div>
             <div class="major">
