--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!-- Navbar -->
     <nav id="navbar">
         <div class="navbar__logo">
-            <a href=""><img src="imgs/motoicon.png" alt="" width="120px"></a>
+            <a href=""><img src="imgs/motoicon.png" alt=""></a>
         </div>
         <ul class="navbar__menu">
             <li class="navbar__menu__item active">Home</li>
