--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
             <a href=""><img src="imgs/motoicon.png" alt=""></a>
         </div>
         <ul class="navbar__menu">
-            <li class="navbar__menu__item active">Home</li>
-            <li class="navbar__menu__item">About</li>
-            <li class="navbar__menu__item">Skills</li>
-            <li class="navbar__menu__item">My Work</li>
-            <li class="navbar__menu__item">Testimonial</li>
-            <li class="navbar__menu__item">Contact</li>
+            <li class="navbar__menu__item active" onclick="scrollToSection('home')">Home</li>
+            <li class="navbar__menu__item" onclick="scrollToSection('about')">About</li>
+            <li class="navbar__menu__item" onclick="scrollToSection('skills')">Skills</li>
+            <li class="navbar__menu__item" onclick="scrollToSection('work')">My Work</li>
+            <li class="navbar__menu__item" onclick="scrollToSection('testimonial')">Testimonial</li>
+            <li class="navbar__menu__item" onclick="scrollToSection('contact')">Contact</li>
         </ul>
 
         <!-- Toggle Button -->
@@ -41,10 +41,12 @@
 
     <!-- Home -->
     <section id="home">
-        <img src="imgs/home-profile.jpg" alt="GYUJEONG's profile photo" class="home_avatar" height=auto />
-        <h1 class="home__title">Hello,<br />I'm GYUJEONG HAN.</h1>
-        <h2 class="home__desciption">Software Engineer</h2>
-        <button class="home__contact">Contact Me</button>
+        <div class="home__container">
+            <img src="imgs/home-profile.jpg" alt="GYUJEONG's profile photo" class="home_avatar" height=auto />
+            <h1 class="home__title">Hello,<br />I'm GYUJEONG HAN.</h1>
+            <h2 class="home__desciption">Software Engineer</h2>
+            <button class="home__contact" onclick="scrollToSection('contact')">Contact Me</button>
+        </div>
     </section>
 
     <!-- About -->
