--- a/index.html
+++ b/index.html
@@ -272,6 +272,12 @@
         </div>
         <p class="contact__rights">2023 GYUJEONG HAN - All rights reserved</p>
     </section>
+
+    <!-- Arrow -->
+    <button class="arrow" onclick="scrollToSection('home')">
+        <img src="imgs/Up-Arrow-PNG-Clipart.png" alt="">
+    </button>
+    
 </body>
 
 </html>
