--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
             <li class="navbar__menu__item active" onclick="scrollToSection('home')">Home</li>
             <li class="navbar__menu__item" onclick="scrollToSection('about')">About</li>
             <li class="navbar__menu__item" onclick="scrollToSection('skills')">Skills</li>
-            <li class="navbar__menu__item" onclick="scrollToSection('work')">My Work</li>
-            <li class="navbar__menu__item" onclick="scrollToSection('testimonial')">Testimonial</li>
+            <li class="navbar__menu__item" onclick="scrollToSection('work')">Works</li>
+            <!-- <li class="navbar__menu__item" onclick="scrollToSection('testimonial')">Testimonial</li> -->
             <li class="navbar__menu__item" onclick="scrollToSection('contact')">Contact</li>
         </ul>
 
@@ -51,7 +51,7 @@
 
     <!-- About -->
     <section id="about" class="section section__container">
-        <h1>About me</h1>
+        <h1>About</h1>
         <p class = "about_hi">I'm majoring in Digital-Media and Software at Ajou University.</p>
         <div class="about__majors">
             <div class="major">
@@ -95,7 +95,6 @@
             <p></p>
             <div class="skillset">
                 <div class="skillset_left">
-                    <h3 class="skillset__title">Skills</h3>
                     <div class="skill">
                         <div class="skill_description">
                             <span>HTML</span>
@@ -171,7 +170,7 @@
 
     <!-- Work -->
     <section id="work" class="section">
-        <h1>My Work</h1>
+        <h1>Works</h1>
         <h3></h3>
         <div class="work__categories">
             <button class="category__btn selected" data-filter="*">All<span class="category__count">3</span></button>
@@ -208,7 +207,7 @@
         </div>
     </section>
 
-    <!-- Testimonial -->
+    <!-- Testimonial
     <section id="testimonial" class="section">
         <h1>Testimonial</h1>
         <div class="testimonials">
@@ -235,11 +234,11 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <!-- Contact -->
     <section id="contact" class="section">
-        <h1 class="contact__title">Let's talk</h1>
+        <h1 class="contact__title">Contact</h1>
         <div class="contact_links">
             <a href="mailto:rbwjrbxo@ajou.ac.kr" target="_blank"><i class="fa-sharp fa-solid fa-envelope"></i></a>
             <a href="https://github.com/GYUJEONGHAN" target="_blank"><i class="fa-brands fa-github" width = "50px"></i></a>
