HTML, CSS: edit profile, arrow, animation

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>GYUJEONG</title>
     <meta name="description" content="Portfolio for software engineer">
     <meta name="author" content="GYUJEONG HAN">
-    <link rel="icon" type="image/png" href="imgs/motoicon.png">
+    <link rel="icon" type="image/png" href="imgs/icon/motoicon.png">
 
     <script src="https://kit.fontawesome.com/c353010116.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -22,7 +22,7 @@
     <!-- Navbar -->
     <nav id="navbar">
         <div class="navbar__logo">
-            <a href=""><img src="imgs/motoicon.png" alt=""></a>
+            <a href=""><img src="imgs/icon/motoicon.png" alt=""></a>
         </div>
         <ul class="navbar__menu">
             <li class="navbar__menu__item active" onclick="scrollToSection('home')">Home</li>
@@ -181,7 +181,7 @@
         <!-- 사진에 마우스 대면 프로젝트 이름이, 클릭하면 Github 링크로 이동 -->
         <div class="work_projects">
             <a href="" class="project" target="_blank" data-type="basic">
-                <img class="project_img" src="imgs/projects/nav.png" alt="pr_img">
+                <img class="project_img" src="imgs/admin.png" alt="pr_img">
                 <div class="project_description">
                     <h3>Example</h3>
                     <div class="project_line"></div>
@@ -189,7 +189,7 @@
                 </div>
             </a>
             <a href="" class="project" target="_blank" data-type="basic">
-                <img class="project_img" src="imgs/projects/nav.png" alt="pr_img">
+                <img class="project_img" src="imgs/admin.png" alt="pr_img">
                 <div class="project_description">
                     <h3>Example</h3>
                     <div class="project_line"></div>
@@ -197,7 +197,7 @@
                 </div>
             </a>
             <a href="" class="project" target="_blank" data-type="react">
-                <img class="project_img" src="imgs/projects/nav.png" alt="pr_img">
+                <img class="project_img" src="imgs/admin.png" alt="pr_img">
                 <div class="project_description">
                     <h3>Example</h3>
                     <div class="project_line"></div>
@@ -242,14 +242,14 @@
         <div class="contact_links">
             <a href="mailto:rbwjrbxo@ajou.ac.kr" target="_blank"><i class="fa-sharp fa-solid fa-envelope"></i></a>
             <a href="https://github.com/GYUJEONGHAN" target="_blank"><i class="fa-brands fa-github" width = "50px"></i></a>
-            <a href="https://gyujh.tistory.com/" target="_blank"><img src="imgs/Tistory.png"></a>
+            <a href="https://gyujh.tistory.com/" target="_blank"><img src="imgs/icon/tistory.png"></a>
         </div>
         <p class="contact__rights">2023 GYUJEONG HAN - All rights reserved</p>
     </section>
 
     <!-- Arrow -->
     <button class="arrow" onclick="scrollToSection('home')">
-        <img src="imgs/Up-Arrow-PNG-Clipart.png" alt="">
+        <img src="imgs/icon/Up-Arrow-PNG-Clipart.png" alt="">
     </button>
     
 </body>
