--- a/index.html
+++ b/index.html
@@ -59,14 +59,14 @@
                     <i class="fab fa-html5"></i>
                 </div>
                 <h2 class="major__title"> Web Front-end</h2>
-                <div class="major__description">HTML<br> CSS<br>JavaScript</div>
+                <div class="major__description">HTML<br> CSS<br>JavaScript<br>React.js</div>
             </div>
             <div class="major">
                 <div class="major__icon">
                     <i class="fa-solid fa-mobile"></i>
                 </div>
                 <h2 class="major__title">Moblie</h2>
-                <div class="major__description">Android<br>Flutter</div>
+                <div class="major__description">Flutter<br>Android</div>
             </div>
         </div>
         <div class="about__jobs">
@@ -173,9 +173,10 @@
         <h1>Works</h1>
         <h3></h3>
         <div class="work__categories">
-            <button class="category__btn selected" data-filter="*">All<span class="category__count">3</span></button>
-            <button class="category__btn" data-filter="basic">Front-end : Web Basic<span class="category__count">2</span></button>
-            <button class="category__btn" data-filter="react">Front-end : React<span class="category__count">1</span></button>
+            <button class="category__btn selected" data-filter="*">All<span class="category__count">4</span></button>
+            <button class="category__btn" data-filter="basic">FE : Web Basic<span class="category__count">2</span></button>
+            <button class="category__btn" data-filter="react">FE : React<span class="category__count">1</span></button>
+            <button class="category__btn" data-filter="flutter">FE : Flutter<span class="category__count">1</span></button>
         </div>
 
         <!-- 사진에 마우스 대면 프로젝트 이름이, 클릭하면 Github 링크로 이동 -->
@@ -197,6 +198,14 @@
                 </div>
             </a>
             <a href="" class="project" target="_blank" data-type="react">
+                <img class="project_img" src="imgs/admin.png" alt="pr_img">
+                <div class="project_description">
+                    <h3>Example</h3>
+                    <div class="project_line"></div>
+                    <span>react</span>
+                </div>
+            </a>
+            <a href="" class="project" target="_blank" data-type="flutter">
                 <img class="project_img" src="imgs/admin.png" alt="pr_img">
                 <div class="project_description">
                     <h3>Example</h3>
