--- a/index.html
+++ b/index.html
@@ -219,104 +219,80 @@
       <h3></h3>
       <div class="work__categories">
         <button class="category__btn selected" data-filter="*">
-          All<span class="category__count">4</span>
+          All<span class="category__count">2</span>
         </button>
         <button class="category__btn" data-filter="basic">
-          Web basic<span class="category__count">2</span>
+          Web basic<span class="category__count">1</span>
         </button>
         <button class="category__btn" data-filter="react">
-          React.js<span class="category__count">1</span>
+          React.js<span class="category__count">0</span>
         </button>
         <button class="category__btn" data-filter="express">
           Express.js<span class="category__count">1</span>
         </button>
         <button class="category__btn" data-filter="flutter">
-          Flutter<span class="category__count">1</span>
+          Flutter<span class="category__count">0</span>
         </button>
       </div>
 
       <!-- 사진에 마우스 대면 프로젝트 이름이, 클릭하면 Github 링크로 이동 -->
       <div class="work_projects">
-        <a href="" class="project" target="_blank" data-type="basic">
-          <img class="project_img" src="imgs/admin.png" alt="pr_img" />
+        <a
+          href="https://github.com/GYUJEONGHAN/portfolio"
+          class="project"
+          target="_blank"
+          data-type="basic"
+        >
+          <img
+            class="project_img"
+            src="imgs/projects/webbasic1.png"
+            alt="pr_img"
+          />
           <div class="project_description">
-            <h3>Example</h3>
+            <h3>Portfolio Web</h3>
             <div class="project_line"></div>
-            <span>basic</span>
+            <span>- HTML/CSS<br />- JavaScript</span>
           </div>
         </a>
-        <a href="" class="project" target="_blank" data-type="basic">
-          <img class="project_img" src="imgs/admin.png" alt="pr_img" />
-          <div class="project_description">
-            <h3>Example</h3>
-            <div class="project_line"></div>
-            <span>basic</span>
-          </div>
-        </a>
-        <a href="" class="project" target="_blank" data-type="react">
-          <img class="project_img" src="imgs/admin.png" alt="pr_img" />
+        <!-- <a href="" class="project" target="_blank" data-type="react">
+          <img class="project_img" src="imgs/projects/admin.png" alt="pr_img" />
           <div class="project_description">
             <h3>Example</h3>
             <div class="project_line"></div>
             <span>react</span>
           </div>
-        </a>
+        </a> -->
         <a
           href="https://github.com/GYUJEONGHAN/the-golf-api-server"
           class="project"
           target="_blank"
           data-type="express"
         >
-          <img class="project_img" src="imgs/the_golf.png" alt="pr_img" />
+          <img
+            class="project_img"
+            src="imgs/projects/the_golf.png"
+            alt="pr_img"
+          />
           <div class="project_description">
             <h3>THE GOLF</h3>
             <div class="project_line"></div>
             <span>- Express.js<br />- 골프웨어 쇼핑몰 api 구현</span>
           </div>
         </a>
-        <a href="" class="project" target="_blank" data-type="flutter">
-          <img class="project_img" src="imgs/admin.png" alt="pr_img" />
+        <!-- <a href="" class="project" target="_blank" data-type="flutter">
+          <img class="project_img" src="imgs/projects/admin.png" alt="pr_img" />
           <div class="project_description">
             <h3>Example</h3>
             <div class="project_line"></div>
             <span>react</span>
           </div>
-        </a>
+        </a> -->
       </div>
     </section>
 
-    <!-- Testimonial
-    <section id="testimonial" class="section">
-        <h1>Testimonial</h1>
-        <div class="testimonials">
-            <div class="testimonial">
-                <img src="imgs/people1.jpg" alt="people1" class="testimonial__avatar">
-                <div class="testimonal__speech-bubble">
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nemo veritatis ipsam, aliquam delectus
-                        quae fuga voluptates ullam soluta quia reiciendis aliquid, sit consectetur maiores laboriosam
-                        molestiae ab inventore illum! Earum.</p>
-                    <p class="name">
-                        <a href="">Mintae Kim</a> / Ajou University
-                    </p>
-                </div>
-            </div>
-            <div class="testimonial">
-                <img src="imgs/people1.jpg" alt="people1" class="testimonial__avatar">
-                <div class="testimonal__speech-bubble">
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nemo veritatis ipsam, aliquam delectus
-                        quae fuga voluptates ullam soluta quia reiciendis aliquid, sit consectetur maiores laboriosam
-                        molestiae ab inventore illum! Earum.</p>
-                    <p class="name">
-                        <a href="">Mintae Kim</a> / Ajou University
-                    </p>
-                </div>
-            </div>
-        </div>
-    </section> -->
-
     <!-- Contact -->
     <section id="contact" class="section">
-      <h1 class="contact__title">Contact</h1>
+      <!-- <h1 class="contact__title">Contact</h1> -->
       <div class="contact_links">
         <a href="mailto:rbwjrbxo@ajou.ac.kr" target="_blank"
           ><i class="fa-sharp fa-solid fa-envelope"></i
