--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
         <div class="job">
           <img src="imgs/jobs/ajou.png" alt="job logo" class="job_logo_1" />
           <div class="job_description">
-            <p class="job__name">Ajou University, Digital-Media and Software</p>
-            <p class="job__period">2018.3 ~ Until now</p>
+            <p class="job__name">Ajou University, Digital-Media & Software</p>
+            <p class="job__period">2018.3 ~ now</p>
           </div>
         </div>
         <div class="job">
@@ -216,7 +216,6 @@
     <!-- Work -->
     <section id="work" class="section">
       <h1>Projects</h1>
-      <h3></h3>
       <div class="work__categories">
         <button class="category__btn selected" data-filter="*">
           All<span class="category__count">2</span>
