--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
       <!-- 사진에 마우스 대면 프로젝트 이름이, 클릭하면 Github 링크로 이동 -->
       <div class="work_projects">
         <a
-          href="https://github.com/GYUJEONGHAN/portfolio"
+          href="https://github.com/gyujh630/portfolio"
           class="project"
           target="_blank"
           data-type="basic"
@@ -262,7 +262,7 @@
           </div>
         </a> -->
         <a
-          href="https://github.com/GYUJEONGHAN/the-golf-api-server"
+          href="https://github.com/gyujh630/the-golf-api-server"
           class="project"
           target="_blank"
           data-type="express"
@@ -296,7 +296,7 @@
         <a href="mailto:rbwjrbxo@ajou.ac.kr" target="_blank"
           ><i class="fa-sharp fa-solid fa-envelope"></i
         ></a>
-        <a href="https://github.com/GYUJEONGHAN" target="_blank"
+        <a href="https://github.com/gyujh630" target="_blank"
           ><i class="fa-brands fa-github" width="50px"></i
         ></a>
         <a href="https://gyujh.tistory.com/" target="_blank"
