--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
           class="home_avatar"
           height="auto"
         />
-        <h1 class="home__title">GYUJEONG HAN</h1>
+        <h1 class="home__title">한규정</h1>
         <h2 class="home__desciption">Software Engineer</h2>
         <button class="home__contact" onclick="scrollToSection('contact')">
-          Contact Me
+          Contact
         </button>
       </div>
     </section>
@@ -74,9 +74,9 @@
     <!-- About -->
     <section id="about" class="section section__container">
       <h1>About</h1>
-      <p class="about_hi">
+      <!-- <p class="about_hi">
         I'm majoring in Digital-Media and Software at Ajou University.
-      </p>
+      </p> -->
       <div class="about__majors">
         <div class="major">
           <div class="major__icon">
@@ -148,10 +148,10 @@
             <div class="skill">
               <div class="skill_description">
                 <span>React.js</span>
-                <span>70%</span>
+                <span>50%</span>
               </div>
               <div class="skill_bar">
-                <div class="skill_value" style="width: 70%"></div>
+                <div class="skill_value" style="width: 50%"></div>
               </div>
             </div>
             <div class="skill">
@@ -175,10 +175,10 @@
             <div class="skill">
               <div class="skill_description">
                 <span>Python</span>
-                <span>70%</span>
+                <span>80%</span>
               </div>
               <div class="skill_bar">
-                <div class="skill_value" style="width: 70%"></div>
+                <div class="skill_value" style="width: 80%"></div>
               </div>
             </div>
             <div class="skill">
@@ -193,7 +193,7 @@
           </div>
           <div class="skillset_right">
             <div class="tools">
-              <h3 class="skillset__title">Tools</h3>
+              <h3 class="skillset__title">tools</h3>
               <ul class="tools_list">
                 <li><span>Visual Studio Code</span></li>
                 <li><span>InteliJ</span></li>
@@ -203,9 +203,10 @@
               </ul>
             </div>
             <div class="etc">
-              <h3 class="skillset__title">Etc</h3>
+              <h3 class="skillset__title">etc</h3>
               <ul class="etc__list">
                 <li><span>Git</span></li>
+                <li><span>Figma</span></li>
               </ul>
             </div>
           </div>
@@ -300,7 +301,7 @@
           ><i class="fa-brands fa-github" width="50px"></i
         ></a>
         <a href="https://gyujh.tistory.com/" target="_blank"
-          ><img src="imgs/icon/tistory.png"
+          ><img src="imgs/icon/tistory.png" class="tistory"
         /></a>
       </div>
       <p class="contact__rights">2023 GYUJEONG HAN - All rights reserved</p>
